--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alifya Difa Afasyah",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "gsap": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
