--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reverse-portal": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "three": "^0.143.0"
   },
