--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "framer-motion": "^7.2.1",
     "gsap": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
